--- a/index.html
+++ b/index.html
@@ -163,19 +163,19 @@ $(document).ready(function(){
   
     <hr class="mt-2 mb-5">
 <div class="row">
-  <div class="col-6">
+  <div class="col-md-6 col-12 col-sm-12">
     <img src="img/our-special-day-1309252.jpg" style="width: 100%;">
   </div>
-    <div class="text-center col-6">
+    <div class="text-center col-md-6 col-12 col-sm-12">
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan lacus vel facilisis volutpat est. Consequat semper viverra nam libero justo. Imperdiet sed euismod nisi porta lorem mollis aliquam ut. Id aliquet risus feugiat in. Cursus turpis massa tincidunt dui ut. Purus faucibus ornare suspendisse sed nisi lacus. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Aenean et tortor at risus viverra adipiscing at. Facilisi morbi tempus iaculis urna id volutpat lacus laoreet non. Interdum consectetur libero id faucibus.
       </p>
       <img src="img/wedding-beetle-1443853.jpg" style="width: 100%;">
   </div> 
-  <div class="text-center text-lg-start col-6">
+  <div class="text-center text-lg-start col-md-6 col-12 col-sm-12">
     <p class="lead">
         Dolor morbi non arcu risus quis varius. Sagittis id consectetur purus ut faucibus pulvinar elementum. Lectus urna duis convallis convallis tellus id interdum. Odio aenean sed adipiscing diam. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus est. Sollicitudin nibh sit amet commodo nulla facilisi. Cras semper auctor neque vitae tempus quam pellentesque. Dui accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vestibulum morbi blandit cursus risus at. Erat pellentesque adipiscing commodo elit at imperdiet. Non pulvinar neque laoreet suspendisse. Dolor sit amet consectetur adipiscing elit. Turpis egestas pretium aenean pharetra magna. Quam nulla porttitor massa id neque aliquam vestibulum. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Egestas purus viverra accumsan in nisl nisi. Lectus magna fringilla urna porttitor rhoncus dolor purus non. Quam lacus suspendisse faucibus interdum posuere. Sit amet volutpat consequat mauris. Quisque id diam vel quam elementum pulvinar etiam.</p>
     </div>
-  <div class="col-6">
+  <div class="col-md-6 col-12 col-sm-12">
     <img src="img/wedding-day-1309189.jpg" style="width: 100%;">
   </div>
   </div>
